2006-09-13 00:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDrawer.h: Added ivars to support implementation.
	* Source/GSNibCompatibility.m: Moved comments to top, for gcc < 3.0
	compilation.
	* Source/NSDrawer.m: Added GSDrawerWindow implementation and
	implementation of some methods in NSDrawer to interact with the 
	window.

2006-09-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSWindowDecorationView.m: Simplify/rewrite to have the view
	always match the window frame so that the window base coordinate
	system has its origin at the bottom left corner of the window frame.
	* Headers/AppKit/NSWindow.h: Improve documentation
	* Headers/Additions/GNUstepGUI/GSDisplayServer.h: ditto

2006-09-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/AppKit/NSWindow.h: Add some documentation about what
	frame management methods should do.  Remove some bogus additional
	methods for messing with frames.
	* Source/NSWindow.m: ([cascadeTopLeftFromPoint:]) implement to match
	MacOS-X specification.  Remove unused additional frame methods.
	* Source/GSWindowDecorationView.h:
	* Source/GSWindowDecorationView.m:
	* Source/GSStandardWindowDecorationView.m:
	Remove unused/unnecessary methods and simplify.
	NB. These fixups require corresponding fixups in the backend.

2006-09-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBitmapImageRep+JPEG.m: Fix declaration position causing
	compile failure on older compilers.  Make more consistent with coding
	(indentation and white space usage) standards.

2006-09-04 00:23 Nicolas Roard <nicolas@roard.com>

	* Source/NSBitmapImageRep+JPEG.m: Added JPEG writing support to 
	NSBitmapImageRep. Only handles RGB images (NS*RGBColorSpace). 
	You can specify the compression ratio by using the 
	NSImageCompressionFactor key in the properties dictionary.

2006-09-03 12:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSStandardWindowDecorationView.m: Put back RELEASE to
	prevent memory leak.